changed Contact section style

--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -77,11 +77,11 @@
 
                     p {
                         font-size: 13px;
-                        color: $bgc-btn;
+                        color: $bgc-btn-blue;
                     }
     
                     svg {
-                        fill: $bgc-btn;
+                        fill: $bgc-btn-blue;
                         width: 30px;
                         height: 30px;                    
                     }
