--- a/src/sass/components/_banner.scss
+++ b/src/sass/components/_banner.scss
@@ -42,7 +42,7 @@
         }
 
         .green {
-            color: $bgc-btn;
+            color: $bgc-btn-blue;
             font-weight: bold;
         }
 
