--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -17,8 +17,8 @@
             transition: 0.3s ease-in-out;
 
             &:hover path {
-                fill: $bgc-btn;
-                stroke: $bgc-btn;
+                fill: $bgc-btn-blue;
+                stroke: $bgc-btn-blue;
             }
         }
     }
