--- a/src/sass/generic/_variables.scss
+++ b/src/sass/generic/_variables.scss
@@ -8,7 +8,7 @@
 // Colors
 $bgc-body: #21272E;
 $content: #fff;
-$bgc-btn: #4FD1C5;
+$bgc-btn-blue: #4FD1C5;
 $bgc-btn-yellow: #f4a949;
 $bgc-navbar: #2e353dde;
 
