--- a/src/sass/generic/_global.scss
+++ b/src/sass/generic/_global.scss
@@ -4,13 +4,6 @@
 body {
     background-color: $bgc-body;
     color: $content;
-    // margin-top: 80px;
-    // position: absolute;
-    // top: 0;
-    // left: 0;
-    // width: 100%;
-    // height: 100%;
-    // pointer-events: none;
 }
 
 
@@ -37,70 +30,12 @@ body {
     z-index: -1000;
   }
 
-// body::before {
-//     content: "";
-//     position: absolute;
-//     top: 0;
-//     left: 0;
-//     width: 100%;
-//     height: 100%;
-//     background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 1600 900"><circle cx="50%" cy="50%" r="1" fill="white"/><circle cx="40%" cy="80%" r="1" fill="white"/><circle cx="30%" cy="50%" r="1" fill="white"/><circle cx="20%" cy="70%" r="1" fill="white"/><circle cx="15%" cy="20%" r="1" fill="white"/><circle cx="10%" cy="90%" r="1" fill="white"/><circle cx="70%" cy="30%" r="1" fill="white"/><circle cx="80%" cy="85%" r="1" fill="white"/><circle cx="90%" cy="10%" r="1" fill="white"/><circle cx="60%" cy="60%" r="1" fill="white"/></svg>');
-//     animation: animateStars 50s linear infinite;
-// }
-
-// @keyframes animateStars {
-//     from {
-//         transform: translateY(0);
-//     }
-//     to {
-//         transform: translateY(-100%);
-//     }
-// }
 
 a {
     color: $content;
+    text-decoration: none;
 }
 
 h2 {
     text-align: center;
 }
-
-
-// back to top button
-// .back-to-top {
-//     position: fixed;
-//     right: 8px;
-//     bottom: 80px;
-//     cursor: pointer;
-//     width: 25px;
-//     height: 25px;
-
-//     svg {
-//         width: 100%;
-//         height: 100%;
-
-//         fill: brown;
-//     }
-
-//     &.none {
-//         display: none;
-//     }
-// }
-
-
-// .skill-container {
-// 	span {
-// 		display: inline-block;
-// 		margin-right: 10px;
-// 	}
-// }
-
-// a {
-// 	display: block;
-// 	color: black;
-// 	background-color: #ede6d9;
-// 	border-color: #ede6d9;
-// 	width: 110px;
-// 	height: 30px;
-// 	border-radius: 30px;
-// }
