--- a/src/sass/generic/_mixins.scss
+++ b/src/sass/generic/_mixins.scss
@@ -46,7 +46,6 @@
     }
 }
 
-
 // Card background style
 @mixin cardBackground {
     background: rgba(46, 53, 61, 0.8705882353);
@@ -69,6 +68,24 @@
     transform: translate(-50%, -50%);
 }
 
+// Skill List Style
+@mixin skillList {
+    p {
+        display: inline-block;
+        font-size: 13px;
+        margin: 0 ;
+        
+        &:not(:last-child) {
+            margin-right: 10px;
+        }
+
+        &:not(:last-child)::after {
+            content: "|"; 
+            margin-left: 10px; 
+        }
+    }
+}
+
 // Mixin: absolute horizontally centered
 // @mixin centerAbsolute {
 //     position: absolute;
@@ -77,7 +94,12 @@
   
 // }
 
-
+// Inner Box style
+@mixin bgc-innerBox {
+    padding: 10px;
+    background-color: rgb(97 118 143 / 12%);
+    border-radius: 15px;
+}
 
 // Title styles
 // @mixin title-styles {
