--- a/src/sass/generic/_global.scss
+++ b/src/sass/generic/_global.scss
@@ -4,31 +4,32 @@
 body {
     background-color: $bgc-body;
     color: $content;
+    
+    .site-container {
+        position: relative; /* 相对定位，使星星能够根据该容器进行绝对定位 */
+        overflow: hidden;
+    }
+
+    .star {
+        position: absolute;
+        width: 2px; /* 星星的宽度 */
+        height: 2px; /* 星星的高度 */
+        background-color: white; /* 星星的颜色 */
+        border-radius: 50%; /* 将方块变为圆形，实现星星的效果 */
+        filter: blur(1px);
+    }
+    
+    
+    .stars {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        pointer-events: none; /* 允许点击事件穿透 */
+        z-index: -1000;
+    }
 }
-
-
-.star {
-    position: absolute;
-    width: 2px; /* 星星的宽度 */
-    height: 2px; /* 星星的高度 */
-    background-color: white; /* 星星的颜色 */
-    border-radius: 50%; /* 将方块变为圆形，实现星星的效果 */
-    filter: blur(1px);
-  }
-  
-  .site-container {
-    position: relative; /* 相对定位，使星星能够根据该容器进行绝对定位 */
-  }
-  
-  .stars {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    pointer-events: none; /* 允许点击事件穿透 */
-    z-index: -1000;
-  }
 
 
 a {
