--- a/src/sass/components/_single-project.scss
+++ b/src/sass/components/_single-project.scss
@@ -32,13 +32,13 @@
         .cta-container {
             display: flex;
             flex-direction: column;
-            align-items: end;
+            align-items: flex-end;
             position: absolute;
             bottom: 10%;
             right: 10%;
 
             p {
-                text-align: end;
+                text-align: flex-end;
             }
 
             .btn-container {
@@ -77,7 +77,7 @@
             .cta-container {
                 display: flex;
                 flex-direction: column;
-                align-items: end;
+                align-items: flex-end;
                 position: absolute;
                 bottom: 10%;
                 right: 10%;
