--- a/src/sass/components/_contact.scss
+++ b/src/sass/components/_contact.scss
@@ -14,7 +14,7 @@
 
         .email {
             text-align: center;
-            margin-top: 40px;
+            margin-top: 70px;
 
             a {
                 font-size: 20px;
@@ -25,6 +25,7 @@
         .button-container {
             display: flex;
             justify-content: center;
+            margin-top: 20px;
 
             .copy-button,
             .is-copied-button {
@@ -58,6 +59,23 @@
             }
         }
 
-        
+        .social-media {
+            width: 70px;
+            height: 70px;
+            margin: 0 auto;
+            display: flex;
+            gap: 20px;
+            margin-top: 20px;
+    
+            svg {
+                width: 100%;
+                height: 100%;
+                transition: 0.3s ease-in-out;
+    
+                &:hover path {
+                    fill: $bgc-btn-blue;
+                }
+            }
+        }
     }
 }
