--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -39,9 +39,10 @@
 
             .MuiTab-textColorPrimary {
                 color: $content;
+                font-size: 18px;
                 font-weight: bold;
-                transition: font-size 0.1s ease-in-out;
                 width: 80%;
+                text-transform: capitalize;
             }
             
             .MuiTab-textColorPrimary.Mui-selected {
