--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -7,10 +7,8 @@
     .site-logo-container {
         width: 30px;
         height: 30px;
-        position: absolute;
+        @include horizontal-center;
         top: 10px;
-        left: 50%;
-        transform: translateX(-50%);
         z-index: 1000;
 
         svg {
@@ -28,8 +26,6 @@
     .site-navigation {
         position: fixed;
         bottom: 0;
-        left: 50%;
-        transform: translateX(-50%);
         width: 100%;
         z-index: 2000;
         border: 1px solid rgb(62 72 83 / 44%);
