--- a/src/sass/components/_project-slider.scss
+++ b/src/sass/components/_project-slider.scss
@@ -56,7 +56,7 @@
     }
 
     .slick-prev {
-        left: calc(50% - 40px);
+        left: calc(50% - 45px);
     }
 
     .slick-next {
@@ -67,10 +67,7 @@
     .slick-next:before {
         font-size: 25px;
         color: $content;
-        position: absolute; 
-        top: 47%; 
-        left: 50%; 
-        transform: translate(-50%, -50%);
+        @include centerElement;
     }
 
     .slick-prev:before {
@@ -91,6 +88,10 @@
 
     @include mqMin($tablet-small) {
 
+        h3 {
+            font-size: 30px;
+        }
+
         .slick-prev,
         .slick-next {
             width: 45px;
@@ -98,7 +99,7 @@
         }
     
         .slick-prev {
-            left: calc(50% - 50px);
+            left: calc(50% - 55px);
         }
     
         .slick-next {
@@ -108,6 +109,7 @@
         .slick-prev:before,
         .slick-next:before {
             font-size: 30px;
+            top: 47%; 
         }
     }
 }
