--- a/src/sass/components/_banner.scss
+++ b/src/sass/components/_banner.scss
@@ -21,7 +21,8 @@
             top: 50%;
             transform: translateY(-50%);
             padding: 10px;
-            backdrop-filter: blur(10px);
+            background-color: #21272eb4;
+            box-shadow: 0 0 20px 20px #21272eb4;
             border-radius: 10px;
             font-size: 20px;
 
