--- a/src/sass/components/_contact.scss
+++ b/src/sass/components/_contact.scss
@@ -49,8 +49,8 @@
         }
 
         .social-media {
-            width: 70px;
-            height: 70px;
+            width: 80px;
+            height: 80px;
             margin: 0 auto;
             display: flex;
             gap: 20px;
@@ -62,7 +62,7 @@
                 transition: 0.3s ease-in-out;
     
                 &:hover path {
-                    fill: $bgc-btn-blue;
+                    fill: $bgc-btn-yellow;
                 }
             }
         }
