--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -18,7 +18,7 @@
             transition: 0.3s ease-in-out;
 
             &:hover path {
-                fill: $bgc-btn-blue;
+                fill: $bgc-btn-yellow;
             }
         }
     }
