--- a/src/sass/components/_single-project.scss
+++ b/src/sass/components/_single-project.scss
@@ -4,84 +4,69 @@
 .single-project-container {
 
     // banner section
-    .banner-container {
-        position: relative;
+    .banner-flex {
+        width: 90%;
+        max-width: 1200px;
+        margin: auto;
+        margin-top: 100px;
 
-        .page-title {
-            margin: 0;
-            font-size: clamp(2rem, 5.5vw, 4rem);
-            @include horizontal-center;
-            top: 20%;
-            z-index: 100;
-            width: 80%;
-            text-align: center;
-        }
-
-        .image-container {
-            img {
-                width: 100%;
-                max-height: 650px;
-                min-height: 490px;
-                object-fit: cover;
-                filter: brightness(35%);  
+        .banner-container {
+            position: relative;
+    
+            .image-container {
+                max-width: 500px;
+                margin: auto;
             }
         }
-
+    
         .cta-container {
+            width: 90%;
+            max-width: 1200px;
+            margin: auto;
             display: flex;
             flex-direction: column;
-            align-items: flex-end;
-            position: absolute;
-            bottom: 10%;
-            right: 10%;
-
-            p {
-                text-align: flex-end;
+            align-items: center;
+    
+            .page-title {
+                font-size: clamp(2.1rem, 3.5vw, 2.7rem);
+                text-align: center;
             }
-
+    
             .btn-container {
                 display: flex;
-                flex-direction: column;
-                gap: 20px;
+                flex-wrap: wrap;
+                justify-content: center;
+                column-gap: 30px;
+                row-gap: 20px;
+                margin-top: 10px;
                 
                 a {
                     text-align: center;
                     @include button-blue;
                     @include buttonHover;
+                    padding: 8px 10px 15px;
                 }
             }
         }
     }
-    
 
-    @include mqMin($tablet-small) {
-        .banner-container {
-    
-            .page-title {
-                top: 35%;
-                left: 50%;
+
+    @include mqMin(55em) {
+
+        .banner-flex {
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+
+            .banner-container {
+                width: 50%;
             }
-            
+
             .cta-container {
-                display: flex;
-                flex-direction: column;
-                align-items: flex-end;
-                position: absolute;
-                bottom: 10%;
-                right: 10%;
-
-                p {
-                    font-size: 20px;
-                }
-
-                .btn-container {
-                    flex-direction: row;
-                    gap: 50px;
-                }
+                width: 45%;
             }
         }
     }
-
 
     .project-intro {
         max-width: 1200px;
@@ -104,7 +89,7 @@
             }
         }
 
-        @include mqMin(800px) {
+        @include mqMin($tablet-medium) {
 
             .overview-column {
                 display: flex;
@@ -112,6 +97,7 @@
             }
             .project-overview {
                 width: 65%;
+                margin-right: 20px;
             }
         }
 
