--- a/src/sass/generic/_global.scss
+++ b/src/sass/generic/_global.scss
@@ -1,47 +1,56 @@
-// @import 'mixins';
+@import 'mixins';
 @import 'variables';
 
 body {
     background-color: $bgc-body;
     color: $content;
+
+    .loading {
+        @include centerElement;
+    }
     
     .site-container {
-        position: relative; /* 相对定位，使星星能够根据该容器进行绝对定位 */
+        min-height: 100vh;
+        display: flex;
+        flex-direction: column;
+
+        // position set for star
+        position: relative;
         overflow: hidden;
+
+        main {
+            flex: 1;
+        }
     }
 
-    .star {
-        position: absolute;
-        width: 2px; /* 星星的宽度 */
-        height: 2px; /* 星星的高度 */
-        background-color: white; /* 星星的颜色 */
-        border-radius: 50%; /* 将方块变为圆形，实现星星的效果 */
-        filter: blur(1px);
-    }
-    
-    
+    // star style
     .stars {
         position: absolute;
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
-        pointer-events: none; /* 允许点击事件穿透 */
+        pointer-events: none;
         z-index: -1000;
+
+        .star {
+            position: absolute;
+            width: 2px; 
+            height: 2px;
+            background-color: white; 
+            border-radius: 50%;
+            filter: blur(1px);
+        }
     }
-}
-
-
-a {
-    color: $content;
-    text-decoration: none;
-}
-
-h2 {
-    text-align: center;
-    font-size: clamp(2rem, 7vw, 2.5rem);
-}
-
-h3 {
-  font-size: 1.5rem;
+    
+    
+    a {
+        color: $content;
+        text-decoration: none;
+    }
+    
+    h2 {
+        text-align: center;
+        font-size: clamp(1.8rem, 3.5vw, 2rem);
+    }
 }
