--- a/src/sass/components/_no-slider-projects.scss
+++ b/src/sass/components/_no-slider-projects.scss
@@ -3,7 +3,7 @@
 .projects-container {
     max-width: 1250px;
     width: 90%;
-    margin: auto;
+    margin: 100px auto 0;
 
     .home-project-container {
 
