fixed copy email button on mobile

--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -3,7 +3,7 @@
 
 .footer-container {
     text-align: center;
-    margin: 90px auto;
+    margin: 0 auto 90px;
 
     .footer-logo-container {
         width: 70px;
