--- a/src/sass/generic/_global.scss
+++ b/src/sass/generic/_global.scss
@@ -1,10 +1,13 @@
 @import 'mixins';
 @import 'variables';
 
+html {
+    scroll-padding-top: 6rem;
+}
+
 body {
     background-color: $bgc-body;
     color: $content;
-
     
     .site-container {
         min-height: 100vh;
