added function to only display projects not currently shown on the Single Page, updated copy email button hover style only available on desktop

--- a/src/sass/components/_contact.scss
+++ b/src/sass/components/_contact.scss
@@ -34,9 +34,11 @@
             }
 
             .copy-button {
-                &:hover {
-                    @include button-yellow;
-                    @include buttonHover;
+                @media (hover: hover) {
+                    &:hover {
+                        @include button-yellow;
+                        @include buttonHover;
+                    }
                 }
             }
 
