--- a/src/sass/generic/_global.scss
+++ b/src/sass/generic/_global.scss
@@ -23,6 +23,8 @@ body {
         }
 
         .loading {
+            width: 50px;
+            height: 50px;
             @include centerElement;
         }
     }
